# athenyx

./: .env.example  .gitignore  CNAME  Dockerfile  IMPORT_IMPROVEMENTS_SUMMARY.md  IMPROVED_INGESTION.md  LICENSE  README.md  SETUP.md  check_readme.py  check_readme_paths.py  check_repos.py  docker-compose.yml  fallback_check_microservices-demo.json  force_reindex.py  index.html  ontology_verification_results.json  package-lock.json  package.json  pyproject.toml  run_app.py  run_ingestion.py  setup_credentials.py  summary_report.md
app/: main.py
frontend/: .env.example  README.md  middleware.ts  next.config.js  package-lock.json  package.json
genv/: pyvenv.cfg
helpers/: check_fallback_relationships.py  check_nodes.py  clean_db.py  clear_repo.py  fix_class_connections.py  fix_function_connections.py  fix_imports.py  fix_ingestion.py  fix_neo4j_loader.py  fix_ontology.py  fix_path_issues.py  fix_relationships.py  query_hierarchy.py  query_java_file.py
ingestion/: __init__.py  config.py  main.py  schema.py
scripts/: ingest_microservices_demo.py
tests/: run_enhanced_ingestion.py  test_enhanced_ingestion.py  test_enhanced_system.py  test_imports.py  test_ingestion.py  test_microservices_ingestion.py  test_neo4j.py  test_proto_parser.py  test_queries.py  test_repo_path.py  test_structure.py
ui/: README.md  app.py  package-lock.json  package.json  tailwind.config.js
utils/: check_api_endpoints.py  check_chunks.py  check_data_models.py  check_documentation.py  check_file_types.py  check_files.py  check_git_loader.py  check_import_details.py  check_inheritance.py  (+10 more)
(+122 files in other folders)
